PROXMOX/VM/etc/iptables.rules
# VM (iptables.rules)
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Allow established and related connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow loopback
-A INPUT -i lo -j ACCEPT

# Allow SSH from Tailscale subnet
-A INPUT -s 100.64.0.0/10 -p tcp --dport 2222 -j ACCEPT

# Allow web traffic only from Cloudflare IPs
-A INPUT -p tcp -s 173.245.48.0/20 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 103.21.244.0/22 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 103.22.200.0/22 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 103.31.4.0/22 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 141.101.64.0/18 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 108.162.192.0/18 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 190.93.240.0/20 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 188.114.96.0/20 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 197.234.240.0/22 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 198.41.128.0/17 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 162.158.0.0/15 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 104.16.0.0/13 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 104.24.0.0/14 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 172.64.0.0/13 -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -s 131.0.72.0/22 -m multiport --dports 80,443 -j ACCEPT

COMMIT
